--- a/index.html
+++ b/index.html
@@ -1,23 +1,76 @@
 <!DOCTYPE html>
-<style>
-  /* netnet default bg */
-  body {
-    margin: 0;
-    background-image: linear-gradient(#515199a8 2px, transparent 1px),
-      linear-gradient(90deg, #515199a8 2px, transparent 1px);
-    background-size: 50px 50px;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-  }
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>brainrot</title>
+    <style>
+      body {
+        margin: 0;
+        height: 100vh;
+        overflow: hidden;
+        background-image: url('bg.jpeg');
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
-  body::before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(0deg, #c76ebca8, #515199a8);
-  }
-</style>
-    
+      .face {
+        position: absolute;
+        width: 150px;
+        height: 150px;
+        background-color: white;
+        border-radius: 50%;
+        top: 300px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 2;
+      }
+
+      .womanbottom {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        background-color: white;
+        clip-path: polygon(0% 100%, 50% 0%, 100% 100%);
+        transform: scale(1) translate(0px, 100px);
+        top: 280px;
+
+        z-index: 1;
+      }
+
+      .eyeL {
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        background-color: black;
+        border-radius: 50%;
+        top: 50px;
+        left: 35%;
+        transform: translateX(-50%);
+      }
+
+      .eyeR {
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        background-color: black;
+        border-radius: 50%;
+        top: 50px;
+        left: 70%;
+        transform: translateX(-50%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="womanbottom"> </div>
+    <div class="face">
+      <div class="eyeL"> </div>
+      <div class="eyeR"> </div>
+    </div>
+    </div>
+  </body>
+</html>
