--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         position: absolute;
         border-left: 10px solid white;
         height: 100px;
-        left: 371px;
-        top: 530px;
+        left: 45%;
+        top: 68%;
         z-index: 1;
       }
 
@@ -89,8 +89,8 @@
         position: absolute;
         border-left: 10px solid white;
         height: 100px;
-        left: 425px;
-        top: 530px;
+        left: 53%;
+        top: 68%;
         z-index: 1;
       }
     </style>
