--- a/index.html
+++ b/index.html
@@ -81,14 +81,24 @@
         z-index: 3;
       }
 
-      .legL,
-      .legL2 {
+      .legL, .legL2 {
         position: absolute;
         border: 5px solid white;
         height: 70px;
-        top: calc(150px + 100px);
-        z-index: -3;
+        top: 250px;
+        left: -30px;
+        z-index: -4;
       }
+
+      .legR, .legR2 {
+        position: absolute;
+        border: 5px solid white;
+        height: 70px;
+        top: 250px;
+        left: 25px;
+        z-index: -4;
+      }
+      
     </style>
   </head>
   <body>
