--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
         z-index: 3;
       }
 
-      .legL, .legL2 {
+      .legL,
+      .legL2 {
         position: absolute;
         border: 5px solid white;
         height: 70px;
@@ -90,7 +91,8 @@
         z-index: -4;
       }
 
-      .legR, .legR2 {
+      .legR,
+      .legR2 {
         position: absolute;
         border: 5px solid white;
         height: 70px;
@@ -98,7 +100,6 @@
         left: 25px;
         z-index: -4;
       }
-      
     </style>
   </head>
   <body>
