--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
       }
 
       .speech-bubble.character2 {
-        top: -150px;
+        top: -130px;
+        width: 200px;
         left: 50%;
         transform: translateX(-50%);
       }
@@ -166,7 +167,7 @@
       }
 
       .adjusted-size {
-        width: 300px;
+        width: 390px;
         padding: 20px;
       }
     </style>
@@ -199,7 +200,6 @@
       const speech1 = document.getElementById('speech1');
       const speech2 = document.getElementById('speech2');
 
-      // Define an array of "brainrot" responses
       const brainrotResponses = [
         'walking in 2024 is crazy',
         'WALKING MENTIONED 🗣️👏',
@@ -211,6 +211,14 @@
         'this is so walkingcore!!!',
         'we got bro walking before gta 6',
         "it's giving going for a walk",
+      ];
+
+      const notBrainrotResponses = [
+        'ah nice i am okay - just have lots to do, how about u',
+        "just been busy with work, u? u've been really walkmaxxing these days",
+        'i’m good, just trying to relax, u?',
+        'nothing much, what about u? u r giving walkingcore ngl',
+        'been a bit hectic, but ok. r u in ur walking era?'
       ];
 
       function showOptions() {
@@ -225,18 +233,24 @@
 
       function respond(choice) {
         if (choice === 'brainrot') {
-          // Randomly select a response from the brainrotResponses array
           const randomIndex = Math.floor(Math.random() * brainrotResponses.length);
           speech2.innerHTML = brainrotResponses[randomIndex];
+          speech2.classList.add('adjusted-size');
+          setTimeout(() => {
+            speech1.innerHTML = 'bruh bye';
+            speech2.classList.remove('adjusted-size');
+            showOptions();
+          }, 2000);
         } else {
-          speech2.innerHTML = 'ah nice i am okay just have lots to do, how about u';
+          const randomIndex = Math.floor(Math.random() * notBrainrotResponses.length);
+          speech2.innerHTML = notBrainrotResponses[randomIndex];
+          speech2.classList.add('adjusted-size');
+          setTimeout(() => {
+            speech1.innerHTML = "haha i'm good, let's hang out soon! gonna head over to the walking trail now";
+            speech2.classList.remove('adjusted-size');
+            showOptions();
+          }, 2000);
         }
-        speech2.classList.add('adjusted-size');
-        setTimeout(() => {
-          speech1.innerHTML = 'bruh';
-          speech2.classList.remove('adjusted-size');
-          showOptions();
-        }, 2000);
       }
 
       speech1.innerHTML = 'heyyy how are u? i was gonna go on a walk if u wanna join';
