--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
       ];
 
       const notBrainrotResponses = [
-        'ah nice i am okay - just have lots to do, how about u',
+        'ah nice i am ok - just have lots to do, how about u',
         "just been busy with work, u? u've been really walkmaxxing these days",
-        'i’m good, just trying to relax, u?',
-        'nothing much, what about u? u r giving walkingcore ngl',
+        'i’m ok, just trying to relax, u?',
+        'nothing much, what about u? ur fit is giving walkingcore ngl',
         'been a bit hectic, but ok. r u in ur walking era?'
       ];
 
@@ -246,7 +246,7 @@
           speech2.innerHTML = notBrainrotResponses[randomIndex];
           speech2.classList.add('adjusted-size');
           setTimeout(() => {
-            speech1.innerHTML = "haha i'm good, let's hang out soon! gonna head over to the walking trail now";
+            speech1.innerHTML = "haha yeah i'm good, let's hang out soon! think i'm gonna head over to the walking trail now";
             speech2.classList.remove('adjusted-size');
             showOptions();
           }, 2000);
