--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         top: 80px;
         left: 50%;
         transform: translateX(-50%);
-        z-index: -2;
+        z-index: 1;
       }
 
       .eyeL,
@@ -89,7 +89,7 @@
         height: 70px;
         top: 250px;
         left: -30px;
-        z-index: -4;
+        z-index: 1;
       }
 
       .legR,
@@ -99,7 +99,7 @@
         height: 70px;
         top: 250px;
         left: 25px;
-        z-index: -4;
+        z-index: 1;
       }
 
       .speech-bubble {
@@ -177,15 +177,42 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: url('glitch-overlay.gif');
-        background-size: cover;
         display: none;
+      }
+
+      .glitch1,
+      .glitch2,
+      .glitch3 {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+      }
+
+      .glitch1 {
+        background-image: url('glitch-overlay.gif');
         opacity: 0.5;
+      }
+
+      .glitch2 {
+        background-image: url('glitch-overlay2.gif');
+        opacity: 0.23;
+      }
+
+      .glitch3 {
+        background-image: url('glitch-overlay3.gif');
+        opacity: 0.2;
       }
     </style>
   </head>
   <body>
-    <div id="glitchOverlay"></div>
+    <div id="glitchOverlay">
+      <div class="glitch1"></div>
+      <div class="glitch2"></div>
+      <div class="glitch3"></div>
+    </div>
     <div class="container character1">
       <div class="face">
         <div class="eyeL"></div>
