min width & height

--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
         height: 20%;
         background: white;
         border-radius: 50%;
+        min-width: 200px;
+        min-height: 100px;
         z-index: -1;
       }
 
@@ -251,7 +253,7 @@
       }
 
       .audio-container {
-        position: fixed;
+        position: absolute;
         top: 90px;
         left: 50%;
         transform: translateX(-50%);
